libs/extractor/tests/snapshots/all_tests__vanilla_extract_font_face_empty_props.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"fontface-minimal.css.ts\",\nr#\"import { fontFace, style } from '@devup-ui/react'\nexport const minimalFont = fontFace({})\nexport const text = style({ fontFamily: minimalFont })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "__devup_font_0_0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "fontface-minimal.css.ts",
                properties: {
                    "font-family": "__devup_font_0_0",
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const text = \"a\";\n;\nexport const minimalFont = \"__devup_font_0_0\";\n",
}
