libs/extractor/tests/snapshots/all_tests__vanilla_extract_font_face_placeholder.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"fontface-remap.css.ts\",\nr#\"import { fontFace, style } from '@devup-ui/react'\nexport const customFont = fontFace({\n  src: 'url(\"/fonts/custom.woff2\")',\n  fontWeight: '400',\n  fontDisplay: 'swap'\n})\nexport const secondFont = fontFace({\n  src: 'local(\"Helvetica\")'\n})\nexport const text = style({ fontFamily: customFont })\nexport const heading = style({ fontFamily: secondFont })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "__devup_font_0_0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-family",
                value: "__devup_font_0_1",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "fontface-remap.css.ts",
                properties: {
                    "font-display": "swap",
                    "font-family": "__devup_font_0_0",
                    "font-weight": "400",
                    "src": "url(\"/fonts/custom.woff2\")",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "fontface-remap.css.ts",
                properties: {
                    "font-family": "__devup_font_0_1",
                    "src": "local(\"Helvetica\")",
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const heading = \"a\";\nexport const text = \"b\";\n;\n;\nexport const customFont = \"__devup_font_0_0\";\nexport const secondFont = \"__devup_font_0_1\";\n",
}
