libs/extractor/tests/snapshots/all_tests__vanilla_extract_global_theme.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"global-theme.css.ts\",\nr#\"import { createGlobalTheme } from '@devup-ui/react'\nexport const vars = createGlobalTheme(':root', {\n  color: {\n    brand: 'blue',\n    text: 'black',\n    background: 'white'\n  },\n  font: {\n    body: 'system-ui, sans-serif'\n  }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--color-background-global_theme_0-2",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-brand-global_theme_0-0",
                value: "blue",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--color-text-global_theme_0-1",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--font-body-global_theme_0-3",
                value: "system-ui,sans-serif",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "global-theme.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\n;\nexport const vars = {\n\t\"color\": {\n\t\t\"brand\": \"var(--color-brand-global_theme_0-0)\",\n\t\t\"text\": \"var(--color-text-global_theme_0-1)\",\n\t\t\"background\": \"var(--color-background-global_theme_0-2)\"\n\t},\n\t\"font\": { \"body\": \"var(--font-body-global_theme_0-3)\" }\n};\n",
}
